--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "e65fee17-2b3a-45cf-809b-92a918037f77",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
        "4           69          0  Government  2917  1910635  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,8 +155,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "97beed97-0416-4c61-a0fa-8a48d32f7f97",
+   "metadata": {},
+   "source": [
+    "# Local Government Area Summary"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "28721126-c1d0-4133-890c-4f2c8ee1a7f8",
    "metadata": {},
    "outputs": [
@@ -164,32 +172,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Schools:  15\n",
-      "Total Students:  32655\n",
-      "Total Budget:  24649428\n",
-      "Budget Per student: 754.84\n"
+      "Total Number of Unique Schools:  15\n",
+      "Total Students:  39170\n",
+      "Total Budget: 24649428.00\n",
+      "Budget Per student: 629.29\n"
      ]
     }
    ],
    "source": [
     "# Calculate the Totals (Schools and Students)\n",
     "school_count =len(school_data_complete[\"school_name\"].unique())\n",
-    "student_count =len(school_data_complete[\"student_name\"].unique())\n",
+    "student_count =len(school_data_complete[\"student_name\"])\n",
     "\n",
     "# Calculate the Total Budget\n",
     "total_budget =sum(school_data_complete[\"budget\"].unique())\n",
+    "\n",
+    "\n",
     "Budget_per_student = total_budget/student_count\n",
     "\n",
-    "print(\"Total Schools: \", school_count)\n",
+    "print(\"Total Number of Unique Schools: \", school_count)\n",
     "print(\"Total Students: \", student_count)\n",
-    "print(\"Total Budget: \", total_budget)\n",
+    "print(f\"Total Budget: {total_budget:.2f}\")\n",
     "print(f\"Budget Per student: {Budget_per_student:.2f}\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "50314851-df1b-4de7-a4cc-d6a2e35b9556",
    "metadata": {},
    "outputs": [
@@ -197,8 +207,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Math Score: 84.37\n",
-      "Average Reading Score: 83.94\n"
+      "Average Math Score: 70.34\n",
+      "Average Reading Score: 69.98\n"
      ]
     }
    ],
@@ -206,8 +216,12 @@
     "# Calculate the Average Scores\n",
     "Total_Math_Score = sum(school_data_complete[\"maths_score\"])\n",
     "Total_Reading_Score = sum(school_data_complete[\"reading_score\"])\n",
+    "\n",
     "average_maths_score =Total_Math_Score/student_count\n",
+    "school_data_complete[\"Average Maths Score\"]=average_maths_score\n",
+    "\n",
     "average_reading_score =Total_Reading_Score/student_count\n",
+    "school_data_complete[\"Average Reading Score\"]=average_reading_score\n",
     "\n",
     "print(f\"Average Math Score: {average_maths_score:.2f}\")\n",
     "print(f\"Average Reading Score: {average_reading_score:.2f}\")\n"
@@ -215,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "b4ab1310-f313-41f6-8f6a-1de2d17d4f2d",
    "metadata": {},
    "outputs": [
@@ -238,17 +252,20 @@
     "students_pass_math = school_data_complete[school_data_complete[\"maths_score\"] >= passing_score]\n",
     "pass_math = len(students_pass_math)\n",
     "percentage_pass_math = (pass_math / len(school_data_complete)) * 100\n",
+    "school_data_complete[\"% Passing Maths\"]=percentage_pass_math\n",
     "\n",
     "# % passing reading (the percentage of students who passed reading)\n",
     "students_pass_reading = school_data_complete[school_data_complete[\"reading_score\"] >= passing_score]\n",
     "pass_reading = len(students_pass_reading)\n",
     "percentage_pass_reading = (pass_reading / len(school_data_complete)) * 100\n",
+    "school_data_complete[\"% Passing Reading\"]=percentage_pass_reading\n",
     "\n",
     "# % overall passing (the percentage of students who passed both maths AND reading)\n",
     "students_pass_both = school_data_complete[(school_data_complete[\"maths_score\"] >= passing_score) & \n",
     "                                          (school_data_complete[\"reading_score\"] >= passing_score)]\n",
     "pass_both = len(students_pass_both)\n",
     "percentage_pass_both = (pass_both / len(school_data_complete)) * 100\n",
+    "school_data_complete[\"% Overall Passing\"]=percentage_pass_both\n",
     "\n",
     "# Output the results\n",
     "print(f\"% Passing Math: {percentage_pass_math:.2f}%\")\n",
@@ -258,49 +275,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
+   "id": "b4141d6f-daa1-486c-8977-be1300f12c45",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Schools</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total Budget</th>\n",
+       "      <th>Average Maths Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15</td>\n",
+       "      <td>39,170</td>\n",
+       "      <td>$24,649,428.00</td>\n",
+       "      <td>70.338192</td>\n",
+       "      <td>69.980138</td>\n",
+       "      <td>86.078632</td>\n",
+       "      <td>84.426857</td>\n",
+       "      <td>72.808272</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Total Schools Total Students    Total Budget  Average Maths Score  \\\n",
+       "0             15         39,170  $24,649,428.00            70.338192   \n",
+       "\n",
+       "   Average Reading Score  % Passing Math  % Passing Reading  % Overall Passing  \n",
+       "0              69.980138       86.078632          84.426857          72.808272  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert to DataFrame\n",
+    "area_summary = pd.DataFrame({\"Total Schools\":[school_count], \"Total Students\":[student_count], \"Total Budget\":[total_budget], \"Average Maths Score\":[average_maths_score], \"Average Reading Score\":[average_reading_score], \"% Passing Math\":[percentage_pass_math],\"% Passing Reading\":[percentage_pass_reading], \"% Overall Passing\":[percentage_pass_both]})\n",
+    "\n",
+    "area_summary[\"Total Students\"] = area_summary[\"Total Students\"].map(\"{:,}\".format)\n",
+    "area_summary[\"Total Budget\"] = area_summary[\"Total Budget\"].map(\"${:,.2f}\".format)\n",
+    "area_summary.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cabbf23c-5ec2-4c73-9d0c-aacd86a00c6e",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b73ae6bb-7510-4328-b4d2-de01be67f441",
+   "metadata": {},
+   "source": [
+    "# School Summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "bb1535fa-4cd8-4bfe-a9b4-0384b390743a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'Total Students'",
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (2301162452.py, line 22)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32m~\\anaconda3\\envs\\dev\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[1;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'Total Students'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[13], line 6\u001b[0m\n\u001b[0;32m      2\u001b[0m area_summary \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(school_data_complete)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Formatting\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m area_summary[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTotal Students\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43marea_summary\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mTotal Students\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mmap(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{:,}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat)\n\u001b[0;32m      7\u001b[0m area_summary[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTotal Budget\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m area_summary[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTotal Budget\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mmap(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m$\u001b[39m\u001b[38;5;132;01m{:,.2f}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat)\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# Display the DataFrame\u001b[39;00m\n",
-      "File \u001b[1;32m~\\anaconda3\\envs\\dev\\lib\\site-packages\\pandas\\core\\frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-      "File \u001b[1;32m~\\anaconda3\\envs\\dev\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[0;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[0;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[0;32m   3810\u001b[0m     ):\n\u001b[0;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'Total Students'"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 22\u001b[1;36m\u001b[0m\n\u001b[1;33m    school_data_complete[[\"school_name\",\"school_type\"].head()\u001b[0m\n\u001b[1;37m                                                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use the code provided to select the type per school from school_data\n",
+    "\n",
+    "school_types = school_data_complete.set_index([\"school_name\"])[\"type\"]\n",
+    "\n",
+    "# Calculate the total student count per school from school_data\n",
+    "per_school_counts = len(school_data_complete[\"school_name\"].unique())\n",
+    "\n",
+    "# Calculate the total school budget and per capita spending per school from school_data\n",
+    "per_school_budget = total_budget/school_count\n",
+    "\n",
+    "per_school_capita = per_school_budget/per_school_counts\n",
+    "\n",
+    "# Calculate the average test scores per school from school_data_complete\n",
+    "per_school_maths = school_data_complete.groupby(\"school_name\")[\"maths_score\"].mean()\n",
+    "per_school_reading = school_data_complete.groupby(\"school_name\")[\"reading_score\"].mean()\n",
+    "\n",
+    "\n",
+    "# Get the students who passed both reading and maths in a separate DataFrame from school_data_complete.\n",
+    "passing_maths_and_reading =per_school_maths + per_school_reading\n",
+    "\n",
+    "\n",
+    "school_data_complete[[\"school_name\",\"school_type\"].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "489b7c18-e2fc-4ba7-aebb-ad4eaf58cdf2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "passing_score = 50\n",
+    "\n",
+    "school_passing_maths = school_data_complete[school_data_complete[\"maths_score\"] >= passing_score]\n",
+    "school_passing_reading = school_data_complete[school_data_complete[\"reading_score\"] >= passing_score]\n",
+    "\n",
+    "# Get the students who passed both reading and maths\n",
+    "passing_maths_and_reading = school_data_complete[\n",
+    "    (school_data_complete[\"maths_score\"] >= passing_score) &\n",
+    "    (school_data_complete[\"reading_score\"] >= passing_score)\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "6cbbbbe9-8147-4045-8c2b-47fedd739059",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (791672066.py, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[36], line 6\u001b[1;36m\u001b[0m\n\u001b[1;33m    \"Total School Budget\": per_school_budget,\u001b[0m\n\u001b[1;37m                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "# Convert to DataFrame\n",
-    "area_summary = pd.DataFrame(school_data_complete)\n",
+    "per_school_summary = pd.DataFrame({\n",
+    "    \"School Name\",\n",
+    "    \"School Type\",\n",
+    "     \"Total Students\",                                  \n",
+    "    \"Total School Budget\": per_school_budget,\n",
+    "    \"Per Student Budget\": per_school_capita,\n",
+    "    \"Average Maths Score\": per_school_maths,\n",
+    "    \"Average Reading Score\": per_school_reading\n",
+    "})\n",
+    "print(per_school_counts)\n",
+    "print(per_school_budget)\n",
+    "print(per_school_capita)\n",
+    "print(per_school_maths)\n",
     "\n",
-    "\n",
-    "# Formatting\n",
-    "area_summary[\"Total Students\"] = area_summary[\"Total Students\"].map(\"{:,}\".format)\n",
-    "area_summary[\"Total Budget\"] = area_summary[\"Total Budget\"].map(\"${:,.2f}\".format)\n",
     "\n",
     "# Display the DataFrame\n",
-    "area_summary"
+    "per_school_summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "ec0a4332-a839-4096-9c69-1311b629ee11",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3058923139.py, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[34], line 7\u001b[1;36m\u001b[0m\n\u001b[1;33m    per_school_summary =\u001b[0m\n\u001b[1;37m                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Formatting the monetary values\n",
+    "per_school_summary[\"Total School Budget\"] = per_school_summary[\"Total School Budget\"].map(\"${:,.2f}\".format)\n",
+    "per_school_summary[\"Per Student Budget\"] = per_school_summary[\"Per Student Budget\"].map(\"${:,.2f}\".format)\n",
+    "\n",
+    "# Display the formatted DataFrame\n",
+    "per_school_summary\n",
+    "per_school_summary =\n",
+    "\n",
+    "# Formatting\n",
+    "per_school_summary[\"Total School Budget\"] = per_school_summary[\"Total School Budget\"].map(\"${:,.2f}\".format)\n",
+    "per_school_summary[\"Per Student Budget\"] = per_school_summary[\"Per Student Budget\"].map(\"${:,.2f}\".format)\n",
+    "\n",
+    "# Display the DataFrame\n",
+    "per_school_summary"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cbbbbe9-8147-4045-8c2b-47fedd739059",
+   "id": "02ef4fed-4b09-4dc6-83fb-a63f6ef1398b",
    "metadata": {},
    "outputs": [],
    "source": []
