--- a/PyCitySchools/Roughwork1.ipynb
+++ b/PyCitySchools/Roughwork1.ipynb
@@ -154,8 +154,9 @@
     "import pandas as pd\n",
     "\n",
     "# File to Load (Remember to Change These)\n",
-    "school_data = Path(r\"C:\\Users\\amrit\\LearnPython\\assignment1\\pandas-challenge\\PyCitySchools\\Resources\\schools_complete.csv\")\n",
-    "student_data = Path(r\"C:\\Users\\amrit\\LearnPython\\assignment1\\pandas-challenge\\PyCitySchools\\Resources\\students_complete.csv\")\n",
+    "school_data = Path('.','Resources','schools_complete.csv')\n",
+    "student_data = Path('.','Resources','students_complete.csv')\n",
+    "\n",
     "\n",
     "# Read School and Student Data File and store into Pandas DataFrames\n",
     "\n",
