--- a/PyCitySchools/main.ipynb
+++ b/PyCitySchools/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "e65fee17-2b3a-45cf-809b-92a918037f77",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
        "4           69          0  Government  2917  1910635  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,8 +142,8 @@
     "import pandas as pd\n",
     "\n",
     "# File to Load (Remember to Change These)\n",
-    "school_data = Path(r\"C:\\Users\\amrit\\LearnPython\\assignment1\\pandas-challenge\\PyCitySchools\\Resources\\schools_complete.csv\")\n",
-    "student_data = Path(r\"C:\\Users\\amrit\\LearnPython\\assignment1\\pandas-challenge\\PyCitySchools\\Resources\\students_complete.csv\")\n",
+    "school_data = Path('.','Resources','schools_complete.csv')\n",
+    "student_data = Path('.','Resources','students_complete.csv')\n",
     "\n",
     "# Read School and Student Data File and store into Pandas DataFrames\n",
     "\n",
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "28721126-c1d0-4133-890c-4f2c8ee1a7f8",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "50314851-df1b-4de7-a4cc-d6a2e35b9556",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "b4ab1310-f313-41f6-8f6a-1de2d17d4f2d",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "b4141d6f-daa1-486c-8977-be1300f12c45",
    "metadata": {},
    "outputs": [
@@ -327,7 +327,7 @@
        "0              69.980138       86.078632          84.426857          72.808272  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "3ac28631-800e-41ef-ba34-1a8d0a9555d8",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
        "4          4    Griffin High School  Independent  1468   917500"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "7463cd2f-be31-491b-91cf-0444afbc943d",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
        "Name: type, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "e9a2b829-327c-47a8-abdd-ac8edaddaa0d",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
        "Name: size, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "a6e45dfe-d8e4-484d-8167-2ed4d4d0e56a",
    "metadata": {},
    "outputs": [
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "dac1006a-1e74-4dfa-9260-38065f4ec9b2",
    "metadata": {},
    "outputs": [
@@ -574,7 +574,7 @@
        "Name: maths_score, dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "b329e85d-31a0-4537-b90e-ad44726b9421",
    "metadata": {},
    "outputs": [
@@ -600,7 +600,7 @@
        "Name: reading_score, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "bb1535fa-4cd8-4bfe-a9b4-0384b390743a",
    "metadata": {},
    "outputs": [
@@ -626,7 +626,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "06009007-2ae6-46cb-9624-3c5769b8d775",
    "metadata": {},
    "outputs": [
@@ -653,7 +653,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "id": "72a7a9bc-0e2c-45a6-a31f-36c891b66358",
    "metadata": {},
    "outputs": [
@@ -682,7 +682,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "id": "489b7c18-e2fc-4ba7-aebb-ad4eaf58cdf2",
    "metadata": {},
    "outputs": [
@@ -710,7 +710,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "id": "6cbbbbe9-8147-4045-8c2b-47fedd739059",
    "metadata": {},
    "outputs": [
@@ -1034,7 +1034,7 @@
        "Wright High School             86.666667          79.722222  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "id": "ec0a4332-a839-4096-9c69-1311b629ee11",
    "metadata": {},
    "outputs": [
@@ -1218,7 +1218,7 @@
        "Rodriguez High School          87.396849          79.419855  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1239,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "id": "02ef4fed-4b09-4dc6-83fb-a63f6ef1398b",
    "metadata": {},
    "outputs": [
@@ -1386,7 +1386,7 @@
        "Ford High School               82.219788          67.469880  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1406,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "id": "5998208f-8e48-4354-a782-d09b245cc560",
    "metadata": {},
    "outputs": [
@@ -1535,7 +1535,7 @@
        "4           69          0  Government  2917  1910635  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1546,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "id": "3ee4ab45-83c1-4992-af70-280b61515e34",
    "metadata": {},
    "outputs": [
@@ -1706,7 +1706,7 @@
        "Wright High School     71.741176  72.179012  73.275862  70.848238"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1749,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "id": "fee3fda8-1c27-4f74-b1f1-e600d5e6a7c6",
    "metadata": {},
    "outputs": [
@@ -1909,7 +1909,7 @@
        "Wright High School     71.823529  71.386831  70.475862  69.821138"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1952,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "id": "178d7e1a-cf0d-4299-90cb-047e1019e046",
    "metadata": {},
    "outputs": [
@@ -1973,7 +1973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "id": "082a0720-4cf4-49c6-bbd4-85ac6bd08107",
    "metadata": {},
    "outputs": [],
@@ -1987,7 +1987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 24,
    "id": "15086935-f0ea-4c3d-a915-2a996a898a41",
    "metadata": {},
    "outputs": [
@@ -2086,7 +2086,7 @@
        "Cabrera High School          80.785791  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2097,7 +2097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 25,
    "id": "6921e693-6ab8-46db-ac23-d286c6044efe",
    "metadata": {},
    "outputs": [],
@@ -2113,7 +2113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 26,
    "id": "bebd513e-bda9-4a24-8240-3ae641c6ffc7",
    "metadata": {},
    "outputs": [
@@ -2455,7 +2455,7 @@
        "Wright High School                            <$585  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2471,7 +2471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
    "id": "9ac5ef88-5da7-4468-9a40-b32d5d636546",
    "metadata": {},
    "outputs": [],
@@ -2486,7 +2486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 28,
    "id": "e6eabf23-3448-4e60-a89e-87b74e356de4",
    "metadata": {},
    "outputs": [
@@ -2586,7 +2586,7 @@
        "<$585                                    $76.72  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2616,7 +2616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 29,
    "id": "344220c3-2f13-4f98-a306-ee567c5da022",
    "metadata": {},
    "outputs": [],
@@ -2628,7 +2628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 30,
    "id": "a5643276-5a3e-4030-bef0-50f4d1af5271",
    "metadata": {},
    "outputs": [
@@ -2727,7 +2727,7 @@
        "Cabrera High School          80.785791  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2742,7 +2742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 31,
    "id": "96a88b07-f7d3-49c5-94b5-e1173740b7fc",
    "metadata": {},
    "outputs": [
@@ -3084,7 +3084,7 @@
        "Wright High School     Medium (1000-2000)  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3105,7 +3105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 32,
    "id": "97bff6d2-870b-4ad3-bd05-96bf16acebf5",
    "metadata": {},
    "outputs": [],
@@ -3120,7 +3120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 33,
    "id": "294ac59c-d3b6-41fe-9284-d3d326f54f1d",
    "metadata": {},
    "outputs": [
@@ -3203,7 +3203,7 @@
        "Small (<1000)             72.335748          72.335748          72.335748  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3233,7 +3233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 34,
    "id": "faca1187-4c04-455b-9186-1abc1c02ebc6",
    "metadata": {},
    "outputs": [],
@@ -3250,7 +3250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 35,
    "id": "c36b4ac8-41b1-415a-91af-c23b1ba7d52c",
    "metadata": {},
    "outputs": [
@@ -3323,7 +3323,7 @@
        "Independent          86.247789          76.973340  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
